--- a/app/src/main/res/layout/activity_recherche.xml
+++ b/app/src/main/res/layout/activity_recherche.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -47,12 +48,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lblDate1"
-        android:text="@string/lblRecherchePointB"
+        android:text="@string/lblRechercheDateA"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="30dp"/>
 
-    <DatePicker
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/btnChoisirDate"
+        android:textSize="15dp"/>
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/lblDate2"
+        android:text="@string/lblRechercheDateB"
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="30dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/btnChoisirDate"
+        android:textSize="15dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnRechercher"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+        android:paddingLeft="80dp"
+        android:paddingRight="80dp"
+        android:textStyle="bold"
+        android:text="@string/lblBtnRechercher"
+        android:onClick="onClickRechercher"/>
 </LinearLayout>
