--- a/ecoTrajet/app/src/main/res/layout/activity_modif_parcour.xml
+++ b/ecoTrajet/app/src/main/res/layout/activity_modif_parcour.xml
@@ -4,28 +4,27 @@
     android:layout_height="fill_parent"
     android:layout_weight="1" >
 
-        <LinearLayout
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context="com.dinfogarneau.cours03e.ecotrajet.ajout_trajet">
+        android:weightSum="1">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="100px"
+            android:paddingTop="10px"
+            android:textSize="30sp"
+            android:text="@string/text_Title_activity"
+            android:layout_gravity="center_horizontal"/>
 
-        <fragment  xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="fill_parent"
-            android:layout_height="300dp"
-            tools:context=".ajout_trajet"
-            tools:layout="@layout/activity_ajout_trajet" />
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="horizontal">
+
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -37,6 +36,7 @@
             <CalendarView
                 android:id="@+id/calendar"
                 android:layout_margin="10dp"
+                android:paddingBottom="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="300dp" />
 
@@ -63,6 +63,7 @@
                 android:layout_height="50dp"
                 android:ellipsize="start"
                 android:id="@+id/idNbPersonne"
+                android:text="@string/text_modif_nbPassager"
                 android:inputType="text"/>
 
         </LinearLayout>
@@ -88,6 +89,7 @@
                 android:layout_height="50dp"
                 android:ellipsize="start"
                 android:id="@+id/idHeureDepart"
+                android:text="@string/text_modif_heure"
                 android:inputType="text"/>
 
         </LinearLayout>
