--- a/ecoTrajet/app/src/main/res/layout/demande_fragment.xml
+++ b/ecoTrajet/app/src/main/res/layout/demande_fragment.xml
@@ -5,6 +5,16 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblNomUtil"
+        android:text="@string/lblNomUtil"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:paddingTop="10dp" />
+
 
     <TextView
         android:id="@android:id/empty"
