--- a/ecoTrajet/app/src/main/res/layout/activity_descriptionparcours.xml
+++ b/ecoTrajet/app/src/main/res/layout/activity_descriptionparcours.xml
@@ -98,6 +98,7 @@
         android:text="@string/btnDemanderDescParcours"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+            android:onClick="onClickDemander"/>
     </LinearLayout>
 </LinearLayout>
